--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,12 @@
         <item>@drawable/atm</item>
         <item>@drawable/clubs</item>
     </string-array>
+    <string-array name="range">
+        <item>500 m</item>
+        <item>1 km</item>
+        <item>2 km</item>
+        <item>3 km</item>
+        <item>4 km</item>
+        <item>5 km</item>
+    </string-array>
 </resources>
