--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,15 +18,18 @@
     </string-array>
 
     <string-array name="more_items">
-        <item>Atms</item>
-        <item>Clubs</item>
+        <item>Atm</item>
+        <item>Club</item>
         <item>Railway station</item>
         <item>Salon</item>
         <item>Beauty Parlour</item>
-        <item>Bakeries</item>
-        <item>Cafes</item>
+        <item>Bakerie</item>
+        <item>Cafe</item>
         <item>Theatre</item>
         <item>Shopping Mall</item>
+        <item>Hindu Temple</item>
+        <item>Church</item>
+
     </string-array>
     <string-array name="more_icons">
         <item>@drawable/atm</item>
@@ -38,6 +41,9 @@
         <item>@drawable/cafe</item>
         <item>@drawable/movie</item>
         <item>@drawable/shopping</item>
+        <item>@drawable/temple</item>
+        <item>@drawable/church</item>
+
     </string-array>
     <string-array name="range">
         <item>500 m</item>
